tests/ui/type-alias-impl-trait/const_generic_type.no_infer.stderr
error: `Bar` is forbidden as the type of a const generic parameter
  --> $DIR/const_generic_type.rs:8:24
   |
LL | async fn test<const N: Bar>() {
   |                        ^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: item does not constrain `Bar::{opaque#0}`
  --> $DIR/const_generic_type.rs:8:10
   |
LL | async fn test<const N: Bar>() {
   |          ^^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/const_generic_type.rs:5:12
   |
LL | type Bar = impl std::fmt::Display;
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

